Add employee opt-in-provider plan

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,7 @@ application.security.jwt.refresh-token.expiration=604800000
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=* 
 
+aws.sns.topicArn=subscriberRequest
+
 
 
