--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>s3</artifactId>
 			<version>2.20.26</version>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>sns</artifactId>
+			<version>2.20.26</version>
+		</dependency>
 	</dependencies>
 
 	<build>
